--- a/_pages/collaborations.html
+++ b/_pages/collaborations.html
@@ -8,6 +8,7 @@ permalink: /collaborations
 
   {%- include project.html href = item.href
 						   img = item.img
+						   video = item.video
 						   name = item.name -%}
 
 {%- endfor -%}
