--- a/_pages/index.html
+++ b/_pages/index.html
@@ -3,4 +3,4 @@ title: Home
 layout: default
 permalink: /
 ---
-<img src="/assets/img/gray-big.jpg" alt="no-img">
+<img src="/assets/img/home.jpg" alt="no-img">
