first version of website|

--- a/_pages/photo.html
+++ b/_pages/photo.html
@@ -1,14 +1,16 @@
 ---
-title: Photos
+title: Photo
 layout: default
-permalink: /photos
+permalink: /photo
 ---
 
 <div class="tiled-gallery">
 
 {% for item in site.static_files %}
 
-  {% if item.path contains 'gallery' %}
+  {% if item.path contains 'gallery' and 
+  	 (item.path contains "jpg" or
+  	  item.path contains "jpeg") %}
   <div class="project-item">
     <a href="{{ item.path }}">
     	<img src="{{ item.path }}" alt="">
