added privacy policy, added software section

--- a/_pages/404.html
+++ b/_pages/404.html
@@ -4,15 +4,15 @@ layout: default
 permalink: /404.html
 ---
 
-{%- include post.html title="PAGE NOT FOUND" 
-                      img="/assets/img/404.jpg"
-                      content='<div class="">
-                                  <div class="page_message_404">
-                                    The page you are searching for does not exist.
-                                  </div>
-                                  <div class="go-to-home">
-                                    <a href="/">Back To Home</a>
-                                  </div>
-                                </div>' -%}
+{%- include project.html title="PAGE NOT FOUND" 
+	                      img="/assets/img/404.jpg"
+	                      content='<div class="">
+	                                  <div class="page_message_404">
+	                                    The page you are searching for does not exist.
+	                                  </div>
+	                                  <div class="go-to-home">
+	                                    <a href="/">Back To Home</a>
+	                                  </div>
+	                                </div>' -%}
 
 
