--- a/_pages/collaborations.html
+++ b/_pages/collaborations.html
@@ -6,9 +6,9 @@ permalink: /collaborations
 
 {%- for item in site.data.collaborations.items -%}
 
-  {%- include project.html href = item.href
-						   img = item.img
-						   video = item.video
-						   name = item.name -%}
+  {%- include project-item.html href = item.href
+							   img = item.img
+							   video = item.video
+							   name = item.name -%}
 
 {%- endfor -%}
