--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -1,6 +1,6 @@
 ---
 title: Contact Me
-layout: single-post
+layout: single-project
 permalink: /contact
 ---
 If you wish to get in contact for booking or any other reason, feel free to leave me a message in the form below or via any of the social platforms below.
@@ -8,7 +8,7 @@ If you wish to get in contact for booking or any other reason, feel free to leav
 
 <form id="contact-form" action="#" method="post" class="comment-form contact">
 	<div class="contact-item form-name">
-		<input name="name" value="" type="text" placeholder="Your Name *" required>
+		<input name="name" value="" type="text" placeholder="Your Name">
 	</div>
 	<div class="contact-item form-email">
 		<input name="email" value="" type="email" placeholder="Your Email *" required>
@@ -18,6 +18,10 @@ If you wish to get in contact for booking or any other reason, feel free to leav
 	</div>
 	<div class="contact-item field-full form-message">
 		<textarea name="message" placeholder="Message *" required></textarea>
+	</div>
+	<div class="contact-item form-privacy">
+		<input  name="privacy" type="checkbox" required> </input>
+		<span> I accept the <a href="/privacy-policy" target="_blank"> Privacy Policy </a> </span>
 	</div>
 	<div class="contact-item form-submit">
 		<input name="submit" type="submit" id="submit" class="submit" value="Send">
