--- a/_pages/instruments.html
+++ b/_pages/instruments.html
@@ -6,8 +6,8 @@ permalink: /instruments
 
 {%- for project in site.data.instruments.items -%}
 
-  {%- include project.html href = project.href
-  						   img = project.img
-  						   name = project.name -%}
+  {%- include project-item.html href = project.href
+			  						   img = project.img
+			  						   name = project.name -%}
 
 {%- endfor -%}
