updated Contact form with newlines

--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -17,7 +17,7 @@ If you wish to get in contact for booking or any other reason, feel free to leav
 		<input id="subject" name="subject" value="" type="text" placeholder="Subject">
 	</div>
 	<div class="contact-item field-full form-message">
-		<textarea name="message" placeholder="Message *" required></textarea>
+		<textarea name="message" placeholder="Message *" rows="6" required></textarea>
 	</div>
 	<div class="contact-item form-privacy">
 		<input  name="privacy" type="checkbox" required> </input>
