--- a/_pages/_software/5-beta-release-notes.html
+++ b/_pages/_software/5-beta-release-notes.html
@@ -13,7 +13,7 @@ description: Control Apollo Console via Midi with UA Midi Control
         <div class="title">
             <span class="version">Version 5 Beta</span>
             <span class="date">18 Sep 2021</span>
-            <a class="fa fa-download" aria-label="download" target="_blank" href="https://www.reddit.com/r/UaMidiControl/comments/pqppa3/ua_midi_control_5_beta_release/"></a>
+            <a class="fa fa-download" aria-label="download" target="_blank" href="https://www.reddit.com/r/UaMidiControl/comments/pqppa3/ua_midi_control_5_beta_release/"> <samp> Download </samp> </a>
         </div>
         <br>
         <h2> Midi updates </h2>
@@ -33,7 +33,7 @@ description: Control Apollo Console via Midi with UA Midi Control
         <ul class="description">
             <li> Combined Mackie and Midi Modes: It is now possible to create custom midi mappings with a device in Mackie Mode. </li>
             <li> Added "Mackie" section in Extra where special Mackie functions can be mapped. </li>
-            <li> Added "DAW Mode" for Mackie (default is F1, or can be custom mapped in Extra/Macke). The app will create a virtual port for every Mackie device with the suffix "DAW", which you should use in your DAW instead of the original port. Then using the "DAW Mode" button, you can quickly switch your Mackie device between Console and your DAW.</li>
+            <li> Added "DAW Mode" for Mackie (default is F1, or can be custom mapped in Extra/Mackie). The app will create a virtual port for every Mackie device with the suffix "DAW", which you should use in your DAW instead of the original port. Then using the "DAW Mode" button, you can quickly switch your Mackie device between Console and your DAW.</li>
             <li> Added LED Feedback for Mackie navigation buttons. </li>
             <li> Fixed plugins being skipped in Mackie Mode. </li>
             <li> Fixed "Global Mappings" causing issues in Mackie Mode. </li>
