--- a/_pages/_software/5-beta-release-notes.html
+++ b/_pages/_software/5-beta-release-notes.html
@@ -13,7 +13,7 @@ description: Control Apollo Console via Midi with UA Midi Control
         <div class="title">
             <span class="version">Version 5 Beta</span>
             <span class="date">18 Sep 2021</span>
-            <a class="fa fa-download" aria-label="download" target="_blank" href="https://www.reddit.com/r/UaMidiControl/comments/pqppa3/ua_midi_control_5_beta_release/"> <samp> Download instructions </samp> </a>
+            <a class="fa fa-download" aria-label="download" target="_blank" href="https://www.reddit.com/r/UaMidiControl/comments/pqppa3/ua_midi_control_5_beta_release/"> <samp> Download instructions (MacOs)</samp> </a>
         </div>
         <br>
         <h2> Midi updates </h2>
