--- a/_pages/concerts.html
+++ b/_pages/concerts.html
@@ -13,6 +13,7 @@ permalink: /concerts
   						   venue = item.venue
   						   city = item.city
   						   country = item.country
+                 project = item.project
   						   href = item.href %}
 
 {% endfor %}
